--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -9,7 +9,7 @@
 
     <div class="content my-container">
 
-        <div class="sharing-ways">
+        <div class="contact-ways">
             <div class="ways-contener">
                 
                 <a class="whatsapp">
@@ -32,12 +32,12 @@
                     @yvestsala2022
                 </a>
 
-                <a>
+                <a href="mailto:info@yvestsala2022.com">
                     <i class="pi pi-envelope"></i> 
                     info@yvestsala2022.com
                 </a>
 
-                <a>
+                <a href="tel:+237670893747">
                     <i class="pi pi-phone"></i> 
                     +237 670 893 747
                 </a>
