--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -14,7 +14,7 @@
     </div>
     <div class="content my-container">
         <app-home-about></app-home-about>
-        <h2><span>Découvrez</span> Le QG De Camapagne</h2>
+        <h2><span>Découvrez</span> Le QG De Campagne</h2>
         <app-infinite-scroll-argument></app-infinite-scroll-argument>
         <h2><span>Découvrez</span> Notre Programme</h2>
         <app-home-program></app-home-program>
