--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -162,6 +162,7 @@
             .hero-content{
                 img{
                     left: 4%;
+                    width: 40vh;
                 }
             }
         }
@@ -232,12 +233,29 @@
                 flex-direction: column;
                 align-items: center;
                 text-align: center;
+                margin-bottom: 0;
+                margin-top: 30px;
                 
                 span{
                     margin-right: 0px;
                     margin-bottom: 15px;
                     border-radius: 3px;
                 }
+            }
+        }
+    }
+}
+
+@media all and (max-width: 930px){
+
+    .home{
+
+        .content{
+
+            h2{
+
+                margin-top: 10px;
+
             }
         }
     }
@@ -252,7 +270,10 @@
             .hero-content{
                 .texts{
 
-                    width: 320px;
+                    .texts{
+                        font-size: 0.9em;
+                        width: 280px;
+                    }
 
                     .text{
                         line-height: 22px;
@@ -275,7 +296,7 @@
 }
 
 
-@media all and (max-width: 730px){
+@media all and (max-width: 768px){
 
     .home{
 
@@ -285,20 +306,16 @@
 
                 img{
                     left: 0;
+                    width: 30vh;
                 }
 
                 .texts{
 
-                    width: 320px;
+                    font-size: 0.9em;
+                        width: 280px;
 
                     h1{
-                        font-size: 3em;
                         text-shadow: 1px 1px 2px #000000bf;
-                    }
-
-                    .text{
-                        line-height: 20px;
-                        font-size: 1.05em;
                     }
 
                 }
@@ -317,6 +334,7 @@
     .home{
 
         .hero{
+            min-height: 100vh;
             height: fit-content;
             padding: 5em 0 1em 0;
 
@@ -324,12 +342,14 @@
 
                 align-items: center;
                 flex-direction: column;
-                padding: 5em 0 2em 0;
+                padding: 0;
+                margin: 0;
 
                 img{
                     position: unset;
                     left: 0;
                     width: 33vh;
+                    margin-bottom: 50px;
                 }
                 
                 .texts{
@@ -338,7 +358,7 @@
                     margin: 0;
 
                     h1{
-                        font-size: 3em;
+                        font-size: 4em;
                         text-shadow: 1px 1px 2px #000000bf;
                     }
 
@@ -354,6 +374,35 @@
 
                 display: none;
             }
+        }
+    }
+}
+
+@media all and (max-width: 425px){
+
+    .home{
+
+        .hero{
+
+            .hero-content{
+
+                img{
+
+                    width: 30vh;
+                }
+                
+                .texts{
+
+                    width: 284px;
+                    margin: 0;
+
+                    .text{
+                        line-height: 23px;
+                    }
+
+                }
+            }
+
         }
     }
 }
