--- a/src/app/components/program/program.component.html
+++ b/src/app/components/program/program.component.html
@@ -7,7 +7,7 @@
         </div>
     </div>
 
-    <div class="program-top">
+    <div class="program-top my-container">
         <app-home-program></app-home-program>
     </div>
 
@@ -26,7 +26,7 @@
                 </span>
             </div>
             <div class="video">
-                <img src="../../../assets/img/home/candidates/images.jpeg" alt="">
+                <img src="../../../assets/img/agenda/campain-crtv.png" alt="">
                 <i class="pi pi-youtube"></i>
                 <span class="video-title">La vision sportive</span>
                 <span class="clock">
@@ -53,8 +53,11 @@
             <div class="texts">
                 <h3 class="colored">En soutenant
                     <span>Yves Tsala</span> ,</h3>
-                <p>vous pouvez porter ce programme au second tour et battre l'extrême droite dès le premier tour.</p>
-                <button routerLink="/partager-la-campagne"> <i class="pi pi-share-alt"></i>Partagez la campagne</button>
+                <p>vous pouvez porter ce programme auprès des électeurs et dans les régions.</p>
+                <div class="buttons">
+                    <button class="share" routerLink="/partager-la-campagne"> <i class="pi pi-share-alt"></i>Partagez la campagne</button>
+                    <button class="donate" routerLink="/faire-un-don"> <i class="pi pi-heart"></i>Faire un don</button>
+                </div>
             </div>
         </div>
     </div>
