--- a/src/app/components/share/share.component.html
+++ b/src/app/components/share/share.component.html
@@ -44,7 +44,7 @@
                     Partager par e-mail
                 </a>
                 <a 
-                    (click)="copyText('https://tructruc.com')" 
+                    (click)="copyText('https://yvestsala2022.com')" 
                     tooltipPosition="bottom" 
                     tooltipEvent="focus" 
                     pTooltip= "Lien copié" 
@@ -54,6 +54,5 @@
                 </a>
             </div>
         </div>
-        
     </div>
 </div>
