--- a/src/app/components/share/share.component.scss
+++ b/src/app/components/share/share.component.scss
@@ -120,3 +120,103 @@ $colorBlue: #15385c;
         
     }
 }
+
+@media all and (max-width: 1180px){
+
+    .share{
+
+        .content{
+
+            .sharing-ways{
+                padding: 45px 75px
+            }
+        }
+        
+    }
+}
+
+@media all and (max-width: 770px){
+
+    .share{
+        .content{
+            .sharing-ways{
+                padding: 0;
+                position: unset;
+                margin-bottom: 100px;
+
+                .ways-contener{
+                    width: 340px;
+                }
+            }
+        }
+    }
+}
+
+@media all and (max-width: 520px){
+
+    .share{
+        .title{
+            min-height: fit-content;
+            .top-content{
+    
+    
+                h1{
+                    width: 100%;
+                    font-size: 2em;
+                    margin-bottom: 25px;
+                }
+    
+                p{
+                    max-width: 100%;
+                    line-height: 25px;
+                    margin-bottom: 10px;
+                }
+            }
+        }
+        .content{
+            .sharing-ways{
+                width: 80%;
+                margin-bottom: 60px;
+
+                .ways-contener{
+                    width: 100%;
+                }
+            }
+        }
+    }
+}
+
+@media all and (max-width: 425px){
+
+    .share{
+        .content{
+            .sharing-ways{
+                width: 100%;
+
+                .ways-contener{
+
+                    a{
+                        padding: 15px 15px;
+                        font-size: 1em;
+                        cursor: pointer;
+                        color: rgb(41, 41, 41);
+                        justify-content: center;
+                        &:hover{
+                            box-shadow: hsla(18, 91%, 59%, 0.826) 0px 3px 8px;
+                        }
+    
+                        i{
+                            margin-right: 10px;
+                            font-size: 1.5em;
+                        }
+    
+                        &:last-child{
+                            border-bottom: none;
+                        }
+    
+                    }
+                }
+            }
+        }
+    }
+}
