--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -2,19 +2,19 @@
     <div class="content my-container">
         <div class="top">
             <div class="left">
-                <a routerLink="">YVESTSALA2022.COM</a>
+                <p class="slogan">DRAW A NEW VISION</p>
                 <p class="summary">Chers basketteurs, chers amoureux de la balle orange, avec vous je veux redorer le blason du basketball camerounais.</p>
                 <p class="summary">Je suis votre candidat</p>
                 <p class="summary">Je suis l'homme de la situation</p>
                 <p class="summary">Je serais votre nouveau président</p>
-                <p class="slogan">DRAW A NEW VISION</p>
+                
             </div>
             <div class="right">
                 <div class="social-medias">
-                    <i class="pi pi-facebook"></i>
-                    <i class="pi pi-twitter"></i>
-                    <i class="pi pi-youtube"></i>
-                    <i class="pi pi-instagram"></i>
+                    <a href="https://www.facebook.com/yvestsala2022" target="_blank"><i class="pi pi-facebook"></i></a>
+                    <a href="https://twitter.com/yvestsala2022" target="_blank"><i class="pi pi-twitter"></i></a>
+                    <a href="https://www.youtube.com/channel/UCqWnDOIRZ1_xnt9f8qGjRag" target="_blank"><i class="pi pi-youtube"></i></a>
+                    <a href="https://www.instagram.com/yvestsala2022/" target="_blank"><i class="pi pi-instagram"></i></a>
                 </div>
     
                 <button class="donate" routerLink="/faire-un-don">
