--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -26,23 +26,22 @@
             .left{
                 display: flex;
                 flex-direction: column;
-                width: 400px;
-    
-                a{
-                    text-decoration: none;
+                width: 420px;
+
+                .slogan{
+                    margin-bottom: 30px;
                     font-weight: 900;
+                    letter-spacing: 5px;
                     position: relative;
-                    color: #15385d;
-                    margin-bottom: 25px;
                     font-size: 1.2em;
-    
+
                     &::after{
                         position: absolute;
                         content: "";
                         left: 0;
                         bottom: -4px;
                         height: 3px;
-                        width: 215px;
+                        width: 287px;
                         background-color: #f56f36;
                     }
                 }
@@ -51,12 +50,12 @@
                     font-size: 0.9em;
                     font-weight: 300;
                 }
-    
-                .slogan{
-                    margin-top: 15px;
-                    font-weight: 900;
-                    letter-spacing: 5px;
+
+                .summary:nth-child(3){
+                    margin-top: 10px;
                 }
+    
+                
             }
     
             .right{
@@ -69,14 +68,20 @@
                 .social-medias{
                     display: flex;
     
-                    i{
-                        font-size: 1.5em;
-                        margin-left: 7px;
-                        cursor: pointer;
-                        transition: all 0.2s ease-in-out;
-    
-                        &:hover{
-                            transform: translateY(-7px);
+                    a{
+                        text-decoration: none;
+                        width: fit-content;
+                        color: #15385d;
+
+                        i{
+                            font-size: 1.5em;
+                            margin-left: 7px;
+                            cursor: pointer;
+                            transition: all 0.2s ease-in-out;
+        
+                            &:hover{
+                                transform: translateY(-7px);
+                            }
                         }
                     }
                 }
@@ -215,7 +220,12 @@
 
                 .left{
                     align-items: center;
-
+                    .slogan{
+                        text-align: center;
+                        &::after{
+                            width: 100%;
+                        }
+                    }
                     .summary{
                         text-align: center;
                     }
@@ -243,8 +253,8 @@
 
                             li{
                                 margin-top: 20px;
-                                margin-left: 0;
-                                margin-right: 20px;
+                                margin-left: 10px;
+                                margin-right: 10px;
                             }
                         }
                     }
