--- a/src/app/components/home-about/home-about.component.scss
+++ b/src/app/components/home-about/home-about.component.scss
@@ -58,7 +58,7 @@ $color: #15385c;
         align-items: center;
         justify-content: center;
         flex-direction: column;
-        margin: 0px 0 20px 0;
+        margin: 0px 0 50px 0;
 
         img{
             width: 95%;
@@ -75,8 +75,7 @@ $color: #15385c;
             align-items: center;
             text-align: center;
             margin-top: 30px;
-            padding-left: 0;
-            padding-right: 0;
+            padding:0;
 
             .header{
                 font-size: 1.3em;
